@@ -32,7 +32,7 @@ libkwordpart_la_SOURCES =  kwfactory.cc kwdoc.cc kwview.cc kwcanvas.cc  \
 		KWordTableFrameSetIface.skel KWordTableFrameSetIface.cc \
 		KWordPartFrameSetIface.skel KWordPartFrameSetIface.cc \
 		KWordPartFrameSetEditIface.skel KWordPartFrameSetEditIface.cc \
-		kwbgspellcheck.cc
+		kwbgspellcheck.cc resizetabledia.cc
 
 libkwordpart_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkwordpart_la_LIBADD = $(LIB_KOFFICEUI) $(LIB_KOTEXT) ../lib/kformula/libkformula.la -lkspell ./libkwmailmerge_interface.la
